2008-08-11 Rex Dieter <rdieter@fedoraproject.org>
    * initial support for KDE 4
    * Add dbus commands to xdg-screensaver for KDE 4 (BR17537)

2008-01-24 Kevin Krammer <kevin.krammer@gmx.at>
    * Fixing security issue in xdg-email and xdg-open at replacing
      parameter in $BROWSER

2007-06-27 Waldo Bastian <waldo.bastian@intel.com>
    * Fix xdg-mime query filetype on XFCE (BR11383)

=== xdg-utils 1.0.2 ====

=== xdg-utils 1.0.1 ====

2006-11-03 Waldo Bastian <waldo.bastian@intel.com>
    * Fixed spurious output on stdout by xdg-desktop-menu
    * Cleaned up shell syntax for xdg-screensaver and xdg-icon-resource
      (fixes Ubuntu 6.10)

2006-10-29 Kevin Krammer <kevin.krammer@gmx.at>
    * Fixed non-ascii mailto URI handling of xdg-emial on non-UTF8 locales
      under KDE

=== xdg-utils 1.0 ====

2006-05-10 Bryce Harrington <bryce@osdl.org>
    * Created xdg-screensaver

2006-04-24 Kevin Krammer <kevin.krammer@gmx.at>
    * Applied patch provided by Benedikt Meurer <benedikt.meurer@unix-ag.uni-siegen.de>
      to improve the compatability of the Makefile
    * Added --title option to xdg-file-dialog
    * Applied another path by Benedikt to let xdg-file-dialog use
      zenity on GNOME and XFCE
    * Added a documentation extraction AWK script created by Benedikt which replaces
      the sed code and adds extraction of examples additionally to the usage info.
    * Added printing of examples to the --help command.

2006-04-14 Kevin Krammer <kevin.krammer@gmx.at>
    * Added documentation for --version to all xml files
    * Added script for file selection task, e.g. using the native file dialog
      to get a file or directory name

2006-04-11 Kevin Krammer <kevin.krammer@gmx.at>
    * Applied exit functions to the other scripts
    * Added a function to check for common commands like --help or --version
      and always perform the same reaction

2006-04-10 Kevin Krammer <kevin.krammer@gmx.at>